--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,15 @@
-<handsontable>
-</handsontable>
+<body style="border: solid">
+<div style="display: flex">
+  <div style="display: flex;flex-direction: column;padding: 10px;">
+    <button [routerLink]="['handsontable']">
+      handsontable
+    </button>
+    <button [routerLink]="['argrid']">
+      argrid
+    </button>
+  </div>
+  <div>
+    <router-outlet></router-outlet>
+  </div>
+</div>
+</body>
