--- a/src/app/ar-grid/ar-grid.html
+++ b/src/app/ar-grid/ar-grid.html
@@ -1,5 +1,6 @@
-<ag-grid-angular style="width: 1000px; height: 500px;" class="ag-fresh"
-                 [rowData]="rowData"
-                 [columnDefs]="columnDefs">
-</ag-grid-angular>
-
+<div style="width: 100%;">
+  <h1>Cell Editor Component Example</h1>
+  <ag-grid-angular #agGrid style="width: 100%; height: 350px;" class="ag-fresh"
+                   [gridOptions]="gridOptions">
+  </ag-grid-angular>
+</div>
