--- a/src/app/ar-grid/ar-grid.html
+++ b/src/app/ar-grid/ar-grid.html
@@ -1,6 +1,16 @@
 <div style="width: 100%;">
-  <h1>Cell Editor Component Example</h1>
+  <h1>Cell Editor</h1>
   <ag-grid-angular #agGrid style="width: 100%; height: 350px;" class="ag-fresh"
-                   [gridOptions]="gridOptions">
+                   [gridOptions]="gridOptions" (cellValueChanged)="kim($event,'cellValueChanged')"
+                   (cellEditingStopped)="kim($event,'cellEditingStopped')" (rowClicked)="kim($event,'rowClicked')">
   </ag-grid-angular>
 </div>
+
+
+<button (click)="kimFunction('add')">
+ Add Data
+</button>
+
+<button (click)="kimFunction('remove')">
+  Remove Data
+</button>
