--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,6 @@
 @import '~ag-grid/dist/styles/ag-grid.css';
 @import '~ag-grid/dist/styles/theme-fresh.css';
+@import '~ag-grid/dist/styles/theme-bootstrap.css';
+@import '~ag-grid/dist/styles/theme-blue.css';
+@import '~ag-grid/dist/styles/theme-dark.css';
+@import '~ag-grid/dist/styles/theme-material.css';
